# SignalLogic

./: .dockerignore  .gitignore  Dockerfile  README.md  audit_imports_signal_company_os.txt  deployment.yaml  dir.txt  docker-compose.yml  hydro_system__retired.py  manual_domain_to_ingress_probe__retired.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.watch/: last_tick
apps/: run_cycle_once.py
apps/lighthouse/: BOUNDARY.md  features.py  predict.py  predict_resonance.py  predict_state.py  train_model.py
apps/observatory_tools/: emit_cyber_attack_raw.py  emit_market_raw_once.py  emit_natural_raw.py  emit_natural_raw_once.py  emit_ocean_raw_once.py
apps/pressure_tools/: chaos_injector.py  net_pulse_injector.py
apps/psr_tools/: _latest_domain_wave.py  domain_to_cyber_attack_ingress.py  domain_to_cyber_ingress.py  domain_to_market_ingress.py  domain_to_natural_ingress.py  domain_to_system_ingress.py  domain_to_trafficking_ingress.py  emit_cyber_attack_domain.py  emit_cyber_domain.py  emit_market_domain.py  emit_natural_domain.py  emit_ocean_domain.py  emit_system_domain.py  emit_trafficking_domain.py  manual_domain_to_ingress_probe.py  observe_market_daily.py  observe_system_from_net_meters.py  run_psr_daily.py  test_cyber_projection.py  trafficking_compliance.py
apps/signal_company_os/: IMPORT_FREEZE.md  RETIREMENT_NOTICE.md  __init__.py  test1.py  test_codex_creation.py  test_hybrid_cycle.py
apps/signal_core/: HYDRO_BOUNDARY.md
apps/tools/: simulate_cyber_pressure.py
archive/: ARCHIVE_BOUNDARY.md  ARCHIVE_EXTRACTION_LOG.md  ARCHIVE_FROZEN_NOTICE.md  CANONICAL_ARCHIVE_README.md  README.md
archive/canon/: COMPANY_HUNTER_DORMANCY_AND_ACTIVATION_CANON.md
config/: company_posture_snapshot.yaml
docs/: ARCHIVED.md  BOUNDARY.md
rhythm_os/: foundations.py
scripts/: run_signal_cycle.sh
signal_light_press/: .header_DOCTRINAL_MIRROR.md  .header_freeze.md  .header_interpretive.md  .header_mirror.md  .header_reference.md  .header_root_canon.md  .housekeeping_started  ARCHIVAL_BOUNDARY.md  AUDIT_FINDINGS.md  CANONICAL_ARCHIVE_BOUNDARY_SEAL_2026-01-29  CANONICAL_ROOTS.md  CORE_MINIMUM_SYSTEMS.md  DOCTRINE_CANON_ADJUDICATION.md  DOCTRINE_CANON_MAP.md  DOCTRINE_MIRROR_ADJUDICATION.md  HEADER_CONTRACT.md  HEADER_TEMPLATES.md  INDEX.md  IP_ENFORCEMENT_CHECKLIST.md  KERNEL_NAVIGATOR.md  KERNEL_TO_OS_BRIDGE.md  MIRROR_CONTENT_AUDIT.md  README.md  SEALS_REVIEW.md  SIGNALCOMPANYOVERIEW.docx  SIGNAL_COMPANY_CORE_OPERATIONS_CANON.md  SYSTEM_MAINTENANCE_AND_DECAY_CANON.md  _CANON_CHECKSUMS.sha256  _CANON_FILE_LIST.txt  _CANON_INVENTORY_SEAL.md  _CANON_SCOPE.txt  audit_canon_list.txt  audit_file_list.txt  audit_header_samples.txt  audit_high_authority_files.txt  audit_timestamps.txt  audit_tree_snapshot.txt  canon_target_list.txt
tests/: conftest.py
(+1024 files in other folders)
